# imf_shear

./: .gitignore  pyproject.toml
imf_shear/: __init__.py  demo_imf_shear.ipynb  shear_angle_calculator.py  shear_demo.py
tests/: test_imf_shear.py
