[tool.poetry]
name = "imf_shear"
version = "0.1.0"
description = ""
authors = ["Ramiz Qudsi <qudsiramiz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
geopack = "^1.0.9"
pyspedas = "^1.3.0"
tabulate = "^0.8.9"
pytplot = "^1.7.28"
h5py = "^3.6.0"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
DateTime = "^4.4"
scipy = "^1.8.0"
scikit-image = "^0.19.1"
spacepy = "^0.4.1"
ipython = "8.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
